# vision

./: .gitignore  README.md  env.sh  pyproject.toml
config/tracking/: seg_cfg_sam2.yaml
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/realsense_publisher/lib/realsense_publisher/: realsense_publisher
install/realsense_publisher/share/realsense_publisher/: package.ps1  package.sh  package.xml
log/: latest_build
ros2/tracking/: setup.cfg  setup.py
ros2/tracking/config/tracking/: seg_cfg_etam.yaml
ros2/tracking/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/tracking/install/tracking/lib/tracking/: realsense_publisher  run_segmentation  visualization
ros2/tracking/install/tracking/share/tracking/: package.ps1  package.sh  package.xml
ros2/tracking/log/: latest_build
ros2/tracking/tracking/: __init__.py  ros2_utils.py  run_segmentation.py  visualization.py
script/: efficienttam_fps_benchmark.py  pipeline.py  realsense_publisher.py  realsense_sanity_check.py  ros2_pose_tracker.py  ros2_utils.py
script/segmentation/: run_segmentation.py
segmentation/efficient_track_anything/: environment.yaml  pyproject.toml  setup.py
segmentation/efficient_track_anything/efficient_track_anything/: README.md  __init__.py  efficienttam_camera_predictor.py  wrapper.py
segmentation/sam2/: pyproject.toml  setup.py
segmentation/sam2/sam2/: README.md  __init__.py  build_sam.py  wrapper.py
src/: __init__.py  efficienttam_fps_benchmark.py  franka_recorder.py  pipeline.py  realsense_ros2_publisher.py  realsense_sanity_check.py  ros2_pose_tracker.py  ros2_pose_tracker_cpp.py  ros2_utils.py
src/vision/cfg/segmentation/: seg_cfg.py
src/vision/utils/: path_utils.py
src/vision/wrapper/: seg_wrapper.py
tracker/FoundationPose_plus_plus/FoundationPose/: datareader.py  estimater.py  network_modules.py  offscreen_renderer.py  pyproject.toml  run_demo.py  run_linemod.py  run_ycb_video.py
tracker/FoundationPose_plus_plus/FoundationPose/bundlesdf/: __init__.py  nerf_helpers.py  nerf_runner.py  run_nerf.py  tool.py
tracker/FoundationPose_plus_plus/FoundationPose/foundationpose_wrapper/: README.md  __init__.py  wrapper.py
tracker/FoundationPose_plus_plus/FoundationPose/learning/: __init__.py
tracker/FoundationPose_plus_plus/FoundationPose/learning/datasets/: h5_dataset.py  pose_dataset.py
tracker/FoundationPose_plus_plus/FoundationPose/learning/models/: network_modules.py  refine_network.py  score_network.py
tracker/FoundationPose_plus_plus/FoundationPose/learning/training/: __init__.py  predict_pose_refine.py  predict_score.py
tracker/FoundationPose_plus_plus/src/: VOT.py  obj_pose_track.py
tracking/FoundationPose_plus_plus/FoundationPose/: Utils.py  build_all_conda.sh  estimater.py  install_runtime.sh  network_modules.py  pyproject.toml  requirements.txt
tracking/FoundationPose_plus_plus/FoundationPose/foundationpose_wrapper/: wrapper.py
tracking/FoundationPose_plus_plus/FoundationPose/learning/datasets/: __init__.py
tracking/FoundationPose_plus_plus/FoundationPose/learning/models/: __init__.py
tracking/FoundationPose_plus_plus/src/: obj_pose_track.py
