[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficient_track_anything"
version = "1.0"
description = "Efficient Track Anything"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache 2.0" }
authors = [
  { name = "Meta AI", email = "yunyang@meta.com" },
]
urls = { Homepage = "https://yformer.github.io/efficient-track-anything/" }
dependencies = [
  "torch>=2.6,<2.7",
  "torchvision>=0.21,<0.22",
  "numpy>=1.26,<2",
  "tqdm>=4.66,<5",
  "hydra-core>=1.3,<2",
  "iopath>=0.1.10,<1",
  "pillow>=10.4,<11",
  "huggingface-hub>=0.26,<1",
  "imageio>=2.34,<3",
  "imageio-ffmpeg>=0.5,<1",
  "opencv-python>=4.10,<5",
  "moviepy>=1.0.3,<2",
  "supervision>=0.25,<1",
]

[project.optional-dependencies]
notebooks = [
  "matplotlib==3.9.2",
  "jupyter==1.0.0",
  "opencv-python==4.10.0.84",
  "eva-decord==0.6.1",
]
interactive-demo = [
  "gradio>=4.44,<6",
  "gradio_client>=1.3,<2",
  "gradio_image_prompter>=0.1,<1",
  "Flask==3.0.3",
  "Flask-Cors==5.0.0",
  "av==13.0.0",
  "dataclasses-json==0.6.7",
  "eva-decord==0.6.1",
  "gunicorn==23.0.0",
  "imagesize==1.4.1",
  "pycocotools==2.0.8",
  "strawberry-graphql==0.243.0",
]
dev = [
  "black==24.2.0",
  "usort==1.0.2",
  "ufmt==2.0.0b2",
  "fvcore==0.1.5.post20221221",
  "pandas==2.2.2",
  "scikit-image==0.24.0",
  "tensorboard==2.17.0",
  "pycocotools==2.0.8",
  "tensordict==0.6.0",
  "opencv-python==4.10.0.84",
  "submitit==1.5.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["efficient_track_anything*"]

[tool.setuptools.package-data]
efficient_track_anything = ["configs/*/*.yaml", "configs/*/*.yml", "csrc/*.cu"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.pypi-dependencies]
efficient_track_anything = { path = ".", editable = true }

[tool.pixi.tasks]
import-smoke = "python -c \"import efficient_track_anything.wrapper; print('efficient_track_anything import smoke passed')\""
wrapper-smoke = "python -c \"from efficient_track_anything.wrapper import EfficientTrackAnythingWrapper; EfficientTrackAnythingWrapper(); print('efficient_track_anything wrapper smoke passed')\""
cuda126-shell = { cmd = "bash", env = { CUDA_HOME = "/usr/local/cuda-12.6", CUDA_PATH = "/usr/local/cuda-12.6", CUDACXX = "/usr/local/cuda-12.6/bin/nvcc" } }

[tool.pixi.system-requirements]
cuda = "12.6"
