[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam2"
version = "1.0"
description = "SAM 2: Segment Anything in Images and Videos"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache 2.0" }
authors = [
  { name = "Meta AI", email = "segment-anything@meta.com" },
]
urls = { Homepage = "https://github.com/facebookresearch/sam2" }
dependencies = [
  "torch==2.6.0",
  "torchvision==0.21.0",
  "numpy==1.26.4",
  "tqdm==4.66.5",
  "hydra-core==1.3.2",
  "iopath==0.1.10",
  "pillow==10.4.0",
  "huggingface-hub==0.26.2",
]

[project.optional-dependencies]
notebooks = [
  "matplotlib==3.9.2",
  "jupyter==1.0.0",
  "opencv-python==4.10.0.84",
  "eva-decord==0.6.1",
]
interactive-demo = [
  "Flask==3.0.3",
  "Flask-Cors==5.0.0",
  "av==13.0.0",
  "dataclasses-json==0.6.7",
  "eva-decord==0.6.1",
  "gunicorn==23.0.0",
  "imagesize==1.4.1",
  "pycocotools==2.0.8",
  "strawberry-graphql==0.243.0",
]
dev = [
  "black==24.2.0",
  "usort==1.0.2",
  "ufmt==2.0.0b2",
  "fvcore==0.1.5.post20221221",
  "pandas==2.2.2",
  "scikit-image==0.24.0",
  "tensorboard==2.17.0",
  "pycocotools==2.0.8",
  "tensordict==0.6.0",
  "opencv-python==4.10.0.84",
  "submitit==1.5.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sam2*"]

[tool.setuptools.package-data]
sam2 = ["configs/*/*.yaml", "configs/*/*.yml", "csrc/*.cu"]
