[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundationpose_wrapper"
version = "0.1.0"
description = "Wrapper packaging for FoundationPose integration."
readme = "readme.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch>=2.6,<2.7",
  "torchvision>=0.21,<0.22",
  "numpy>=1.26,<2",
  "scipy>=1.12,<2",
  "PyYAML>=6,<7",
  "ruamel.yaml>=0.18,<0.19",
  "h5py>=3.10,<4",
  "numba>=0.59,<1",
  "pybind11>=2.12,<4",
  "imageio>=2.34,<3",
  "opencv-python>=4.10,<5",
  "pyglet>=1.5,<2",
  "trimesh>=4.2,<5",
  "pyrender>=0.1.45,<0.2",
  "PyOpenGL>=3.1.0",
  "PyOpenGL_accelerate>=3.1.0",
  "meshcat>=0.3,<0.4",
  "webdataset>=0.2.86,<1",
  "omegaconf>=2.3,<3",
  "pypng==0.20220715.0",
  "simplejson>=3.19,<4",
  "colorama>=0.4.6,<1",
  "kornia>=0.7.2,<0.8",
  "einops>=0.7,<1",
  "transformations==2024.6.1",
  "joblib>=1.3,<2",
  "psutil>=5.9.8,<8",
  "pandas>=2.2,<3",
  "matplotlib>=3.9,<4",
  "tqdm>=4.66,<5",
  "fvcore==0.1.5.post20221221",
  "Pillow>=10.4,<11",
  "scikit-image>=0.22,<1",
  "scikit-learn>=1.4,<2",
]

[tool.setuptools]
py-modules = ["Utils", "datareader", "estimater", "offscreen_renderer", "network_modules"]

[tool.setuptools.packages.find]
include = ["foundationpose_wrapper*", "learning*", "bundlesdf*"]

[tool.setuptools.package-data]
bundlesdf = ["*.yml", "*.yaml"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
cmake = ">=3.28,<4"
ninja = ">=1.11,<2"
eigen = "3.4.*"

[tool.pixi.pypi-dependencies]
foundationpose_wrapper = { path = ".", editable = true }

[tool.pixi.tasks]
import-smoke = "python -c \"import foundationpose_wrapper; print('foundationpose_wrapper import smoke passed')\""
wrapper-smoke = "python -c \"from foundationpose_wrapper import FoundationPoseWrapper; FoundationPoseWrapper(); print('foundationpose_wrapper smoke passed')\""
build-native = "bash build_all_conda.sh"
cuda126-shell = { cmd = "bash", env = { CUDA_HOME = "/usr/local/cuda-12.6", CUDA_PATH = "/usr/local/cuda-12.6", CUDACXX = "/usr/local/cuda-12.6/bin/nvcc" } }

[tool.pixi.system-requirements]
cuda = "12.6"
