[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foundationpose_wrapper"
version = "0.1.0"
description = "Wrapper packaging for FoundationPose integration."
readme = "readme.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "numpy>=1.26,<2",
  "scipy>=1.12,<2",
  "PyYAML>=6,<7",
  "ruamel.yaml>=0.18,<0.19",
  "h5py>=3.10,<4",
  "numba>=0.59,<1",
  "pybind11>=2.12,<4",
  "imageio>=2.34,<3",
  "opencv-python>=4.10,<5",
  "pyglet>=1.5,<2",
  "trimesh>=4.2,<5",
  "pyrender>=0.1.45,<0.2",
  "PyOpenGL>=3.1.0",
  "PyOpenGL_accelerate>=3.1.0",
  "meshcat>=0.3,<0.4",
  "webdataset>=0.2.86,<1",
  "omegaconf>=2.3,<3",
  "pypng==0.20220715.0",
  "simplejson>=3.19,<4",
  "colorama>=0.4.6,<1",
  "kornia>=0.7.2,<0.8",
  "einops>=0.7,<1",
  "transformations==2024.6.1",
  "joblib>=1.3,<2",
  "warp-lang==1.0.2",
  "psutil>=5.9.8,<8",
  "pandas>=2.2,<3",
  "matplotlib>=3.9,<4",
  "tqdm>=4.66,<5",
  "fvcore==0.1.5.post20221221",
  "iopath==0.1.10",
  "Pillow>=10.4,<13",
  "scikit-image>=0.22,<1",
  "scikit-learn>=1.4,<2",
]

[tool.setuptools]
py-modules = ["Utils", "datareader", "estimater", "offscreen_renderer", "network_modules"]

[tool.setuptools.packages.find]
include = ["foundationpose_wrapper*", "learning*", "bundlesdf*"]

[tool.setuptools.package-data]
bundlesdf = ["*.yml", "*.yaml"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge", "https://prefix.dev/robostack-jazzy"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
pip = "*"
numpy = "1.26.*"
cmake = ">=3.28,<4"
ninja = ">=1.11,<2"
eigen = "3.4.*"
pybind11 = ">=2.12,<4"
libboost-devel = "1.88.*"
gcc_linux-64 = "12.*"
gxx_linux-64 = "12.*"
open3d = "0.19.*"
cuda-nvcc_linux-64 = "12.1.*"
cuda-libraries-dev = "12.1.*"
ros-jazzy-ros-base = "*"
ros-jazzy-sensor-msgs = "*"
ros-jazzy-geometry-msgs = "*"

[tool.pixi.pypi-dependencies]
foundationpose_wrapper = { path = ".", editable = true }
efficient_track_anything = { path = "../../../segmentation/efficient_track_anything", editable = true }

[tool.pixi.tasks]
import-smoke = "python -c \"import foundationpose_wrapper; print('foundationpose_wrapper import smoke passed')\""
wrapper-smoke = "python -c \"from foundationpose_wrapper import FoundationPoseWrapper; FoundationPoseWrapper(); print('foundationpose_wrapper smoke passed')\""
runtime-smoke = "python -c \"import importlib.util as u; print('pytorch3d', bool(u.find_spec('pytorch3d'))); print('nvdiffrast', bool(u.find_spec('nvdiffrast'))); print('open3d', bool(u.find_spec('open3d'))); print('warp', bool(u.find_spec('warp')));\""
install-runtime = "bash install_runtime.sh"
build-native = "bash -lc 'cd mycpp && mkdir -p build && cd build && cmake .. -DPYTHON_EXECUTABLE=\"$(which python)\" -DCMAKE_PREFIX_PATH=\"$(python -c \"import pybind11; print(pybind11.get_cmake_dir())\")\" && make -j\"$(nproc)\"'"

[tool.pixi.tasks.ros2-pose-tracker-efficient-tam]
cmd = """
bash -lc 'export PYTHONPATH="$PWD/segmentation/sam2${PYTHONPATH:+:$PYTHONPATH}"; python -m src.ros2_pose_tracker --tracker efficient_tam --tracker-config configs/efficienttam/efficienttam_s_512x512.yaml --tracker-checkpoint checkpoints/efficienttam_s_512x512.pt --mesh-path demo_data/t_shape/t_shape.obj'
"""
cwd = "../../.."

[tool.pixi.tasks.cuda126-shell]
cmd = '''
bash -lc 'cuda_home=$(dirname "$(dirname "$(command -v nvcc)")"); export CUDA_HOME="$cuda_home"; export CUDA_PATH="$cuda_home"; export CUDACXX="$cuda_home/bin/nvcc"; echo "Using CUDA toolkit at $CUDA_HOME"; exec bash'
'''

[tool.pixi.system-requirements]
cuda = "12.1"
