<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_publisher</name>
  <version>0.1.0</version>
  <description>ROS2 publisher for USB Intel RealSense RGB, depth, and camera info topics.</description>
  <maintainer email="shuai@example.com">shuai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Python runtime dependencies are provided by the Pixi environment: numpy,
       opencv-python for optional preview windows, and pyrealsense2 for hardware access. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
